# sparv-sbx-sentiment-analysis

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release-sentence-sentiment-kb-sent.yml  release.yml  scheduled.yml  test.yml
assets/metadata/: .gitignore  config.yaml
examples/issue-10/: config.yaml
examples/issue-10/expected_export/xml_export.pretty/: fp-1905-v_export.gold.xml
examples/issue-10/source/: fp-1905-v.xml
examples/small-txt/: config.yaml
examples/small-txt/expected_export/xml_export.pretty/: small_export.gold.xml
examples/sparv-sbx-sentence-sentiment-kb-sent/: config.yaml
examples/sparv-sbx-sentence-sentiment-kb-sent/source/: small.txt
examples/texts/: fp-1905-v.xml  small.txt
scripts/: transform_readme.py
sparv-sbx-sentence-sentiment-kb-sent/: .bumpversion.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml
sparv-sbx-sentence-sentiment-kb-sent/src/sbx_sentence_sentiment_kb_sent/: __init__.py  annotations.py  constants.py  metadata.yaml  sentiment_analyzer.py
sparv-sbx-sentence-sentiment-kb-sent/tests/: test_annotations.py  test_sentiment_analyzer.py  test_version.py  testing.py
sparv-sbx-sentence-sentiment-kb-sent/tests/__snapshots__/: test_annotations.ambr  test_sentiment_analyzer.ambr
src/sbx_sentiment_kb_sent/: __init__.py  annotations.py  constants.py  metadata.yaml  sentiment_analyzer.py
tests/: test_annotations.py  test_sentiment_analyzer.py
tests/__snapshots__/: test_annotations.ambr
