[project]
name = "sparv-sbx-sentence-sentiment-workspace"
dependencies = []
requires-python = ">=3.9,<3.12"
version = "0.0.0"

[tool.uv]

[tool.uv.workspace]
members = ["sparv-sbx-sentence-sentiment-kb-sent"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "syrupy>=4.9.1",
    "sparv-pipeline-testing @ git+https://github.com/spraakbanken/sparv-pipeline-testing.git@v0.1.5",
]
